$Id$

2017-10-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SMART Modular Technologies mSATA XL+ SSDs (patch from ticket #802)
	- StorFly CFast SATA: Add missing space.
	- Fix regexp from tickets #882, #885.

2017-10-05  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add StorFly CFast SATA 6Gbps SSDs (#911)

2017-10-05  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Red: WD80EFAX (tickets #857, #899)
	- USB: Toshiba Canvio (0x0480:0xb207)
	- USB: Apple/TOSHIBA MQ01UBB200 (0x05ac:0x8406)
	- USB: Seagate Expansion Portable 2TB (0x0bc2:0x231a)
	- USB: Maxtor M3 Portable 4TB (0x0bc2:0x61b7) (ticket #875)
	- USB: WD Elements / My Passport (0x1058:0x259f) (ticket #833)
	- USB: WD Elements / My Passport (0x1058:0x25e2)
	- USB: WD Elements / My Passport (0x1058:0x25fa) (ticket #840)
	- USB: WD My Book / Easystore (0x1058:0x1230) (ticket #835)
	- USB: WD My Book / Easystore (0x1058:0x25fb) (tickets #857, #899)
	- USB: JMicron JMS561U (0x152d:0x8561) (ticket #860)
	- USB: Innostor IS888 (0x1f75:0x0888): -d sat works (ticket #827)

2017-10-04  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl.8.in: update information about NVMe in Darwin and OS/2 support
	smartd.cpp, utility.cpp: fix compiler warnings related to vprintf

2017-10-03  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Print new NVMe 1.3 feature flags.

2017-10-02  Christian Franke  <franke@computer.org>

	smartd.cpp: Add strict tests of /dev/null redirection and chdir("/").

	configure.ac: Use '-fstack-protector' if '-strong' is not supported.

2017-10-01  Christian Franke  <franke@computer.org>

	configure.ac: Set default LDFLAGS for MinGW only if LDFLAGS is unset.
	Add '-Wformat=2 -fstack-protector-strong' if supported and CXXFLAGS
	is unset.

	drivedb.h:
	- Fix regexp from tickets #714, #721, #759, #789, #797, #798, #806,
	  #824, #825, #866, #872, #880.
	- SK hynix SATA SSDs (based on patch from ticket #874)

2017-09-25  Alex Samorukov  <samm@os2.kiev.ua>

	NVME: