@@ -404,20 +404,23 @@ EXTRA_DIST = \
         $(examples_SCRIPTS)
 
 CLEANFILES = \
-        smartd.conf.5 \
-        smartd.conf.4 \
         smartd.8 \
         smartd.1m \
         smartd.8.html \
         smartd.8.html.tmp \
+        smartd.8.pdf \
         smartd.8.txt \
         smartctl.8 \
         smartctl.1m \
         smartctl.8.html \
         smartctl.8.html.tmp \
+        smartctl.8.pdf \
         smartctl.8.txt \
+        smartd.conf.5 \
+        smartd.conf.4 \
         smartd.conf.5.html \
         smartd.conf.5.html.tmp \
+        smartd.conf.5.pdf \
         smartd.conf.5.txt \
         smartd.initd \
         smartd.freebsd.initd \
@@ -427,6 +430,10 @@ CLEANFILES = \
         update-smart-drivedb \
         update-smart-drivedb.8 \
         update-smart-drivedb.1m \
+        update-smart-drivedb.8.html \
+        update-smart-drivedb.8.html.tmp \
+        update-smart-drivedb.8.pdf \
+        update-smart-drivedb.8.txt \
         SMART
 
 # 'make maintainer-clean' also removes files generated by './autogen.sh'
@@ -670,10 +677,12 @@ update-smart-drivedb.1m: update-smart-drivedb.8
 	@$(SOLARIS_MAN_FILTER) < update-smart-drivedb.8 > $@
 
 
-# Commands to convert man pages into .html and .txt
+# Convert man pages into .html, .pdf and .txt
 # TODO: configure
 MAN2HTML = man2html
 #MAN2HTML = groff -man -Thtml
+MAN2PDF = man -Tpdf -l
+#MAN2PDF = groff -man -Tpdf
 MAN2TXT = groff -man -Tascii -P'-bcou'
 
 # Remove HTTP header and fix links in man2html output
@@ -683,11 +692,11 @@ FIXHTML = sed -e '1s,^Content-type.*,,' \
               -e 's,<A HREF="[^"]*/man2html?[^"]*">\([^<]*\)</A>,\1,g' \
               -e 's,<A HREF="mailto:[^s][^m][^a][^"]*">\([^<]*\)</A>,\1,g'
 
-# Convert man pages into .html and .txt
+htmlman: smartctl.8.html smartd.8.html smartd.conf.5.html update-smart-drivedb.8.html
 
-htmlman: smartctl.8.html smartd.8.html smartd.conf.5.html
+pdfman:  smartctl.8.pdf smartd.8.pdf smartd.conf.5.pdf update-smart-drivedb.8.pdf
 
-txtman:  smartctl.8.txt smartd.8.txt smartd.conf.5.txt
+txtman:  smartctl.8.txt smartd.8.txt smartd.conf.5.txt update-smart-drivedb.8.txt
 
 %.5.html: %.5
 	$(MAN2HTML) $< > $@.tmp
@@ -698,6 +707,12 @@ txtman:  smartctl.8.txt smartd.8.txt smartd.conf.5.txt
 	$(MAN2HTML) $< > $@.tmp
 	@echo ' $$(FIXHTML) < $@.tmp > $@'
 	@$(FIXHTML) < $@.tmp > $@
+
+%.5.pdf: %.5
+	$(MAN2PDF) $< > $@
+
+%.8.pdf: %.8
+	$(MAN2PDF) $< > $@
 
 %.5.txt: %.5
 	$(MAN2TXT) $< > $@
@@ -800,11 +815,11 @@ FILES_WIN32 = \
         $(docdir_win32)/checksums$(win_bits).txt \
         $(docdir_win32)/smartd.conf \
         $(docdir_win32)/smartctl.8.html \
-        $(docdir_win32)/smartctl.8.txt \
+        $(docdir_win32)/smartctl.8.pdf \
         $(docdir_win32)/smartd.8.html \
-        $(docdir_win32)/smartd.8.txt \
+        $(docdir_win32)/smartd.8.pdf \
         $(docdir_win32)/smartd.conf.5.html \
-        $(docdir_win32)/smartd.conf.5.txt
+        $(docdir_win32)/smartd.conf.5.pdf
 
 if ENABLE_DRIVEDB
 FILES_WIN32 += \
@@ -902,9 +917,8 @@ $(docdir_win32)/%.html: %.html
 	$(UNIX2DOS) < $< > $@
 	touch -r $< $@
 
-$(docdir_win32)/%.txt: %.txt
-	$(UNIX2DOS) < $< > $@
-	touch -r $< $@
+$(docdir_win32)/%.pdf: %.pdf
+	cp -p $< $@
 
 $(docdir_win32)/%.txt: $(srcdir)/%
 	$(UNIX2DOS) < $< > $@
